--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,7 @@
-$main-color: #102542;
-$font-color: #CF4D6F;
-$content-background-color: #FFD1BA;
-$help-color:#CDD7D6;
-$animate: all 0.2s ease-in-out;
-
-@font-face{
-  font-family: "B612";
-  src: url("/fonts/B612-Regular.ttf") format("opentype");
-}
-
+@import 'blocks/_header.scss';
+@import 'blocks/_main.scss';
+@import 'blocks/_list.scss';
+@import 'blocks/_overlay.scss';
 *{
   box-sizing: border-box;
   font-family: "B612";
@@ -21,150 +14,4 @@ body{
   background-color: $main-color;
 }
 
-.header-wrapper{
-  position: sticky;
-  top: 0;
-  width: 100%;
-  flex: 0 0 50%;
-  display: flex;
-  justify-content: space-between;
-  padding: 15px;
-  margin:0;
-  background-color: $main-color;
-  align-items: center;
 
-  &__logo{
-    border-radius: 50%;
-    max-width: 5rem;
-  }
-
-  &__nav{
-    list-style-type: none;
-    display: flex;
-    padding: 10px;
-    margin: 0;
-    width: 80%;
-    justify-content: flex-end;
-    &__item{
-      margin-left: 10px;
-      flex: 0 1 15%;
-      font-size: 130%;
-      color: $font-color;
-      display: inline-block;
-
-      &__ref{
-        text-decoration: none;
-        color: $font-color;
-        transition-duration: 1s;
-        display: block;
-        text-align: center;
-
-        &::after{
-          content: '';
-          display: block;
-          width: 0;
-          height: 2px;
-          background-color: #fff;
-          transition: width .3s;
-        }
-
-        &:hover{
-          color: $help-color;
-          transform: scale(1.07);
-          &::after{
-            width: 100%;
-            transition: width .3s;
-            background-color: $content-background-color;
-          }
-        }
-      }
-    }
-  }
-}
-
-.main-wrapper{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  
-
-  &__home-block{
-    background-color: $content-background-color;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 20px;
-    margin: 20rem 0;
-    color: $font-color;
-    padding: 15px;
-    &__title{
-      text-align: center;
-    }
-    &__information{
-      text-align: center;
-      line-height: 2rem;
-    }
-    
-  
-  }
-  
-  &__skills-block{
-    background-color: $content-background-color;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 20px;
-    margin: 20rem 0;
-    color: $font-color;
-    padding: 15px;
-
-    &__title{
-        text-align: center;
-    }
-
-    &__skills-list{
-      width: 100%;
-      justify-content: space-between;
-      display: flex;
-      padding: 0 0 3rem 0;
-      margin: 0;
-      &__skill-item{
-        display: flex;
-        flex-direction: column;
-        flex: 0 0 30%;
-        justify-content: center;
-       
-        &__skill-title{
-          text-align: center;
-        }
-
-        &__skill-list{
-          list-style-type: armenian;
-        
-          &__list-item{
-            flex: 0 1 100%;
-            display: flex;
-            justify-content: space-between;
-            &::after{
-              content: "native";
-              color: black;
-              
-            }
-            &:last-child{
-              &::after{
-                content: "B2";
-              }
-            }
-            
-          }
-        }
-
-        &__skill-title{
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-  
-}
