--- a/scss/blocks/_overlay.scss
+++ b/scss/blocks/_overlay.scss
@@ -1,9 +1,8 @@
 .overaly-container{
   position: relative;
-
   &:hover{
     .overlay{
-      width: 100%;
+
       &__text{
         transition: 1s;
         color: rgba(207,77,111,1);
@@ -17,6 +16,7 @@
 }
 
 .overlay {
+
   border-radius: 20px;
   position: absolute;
   bottom: 0;
@@ -24,9 +24,9 @@
   right: 0;
   background-color: rgba(255,255,255,0.5);
   overflow: hidden;
-  width: 0;
+  width: 100%;
   height: 100%;
-  transition: .3s ease-out;
+  transition: 1s ease-out;
 
   &__text{
     position: relative;
@@ -39,6 +39,5 @@
     height: 100%;
     color: rgba(0,0,0,0);
     transition-duration: 1s;
-    
   }
 }
