--- a/scss/blocks/_list.scss
+++ b/scss/blocks/_list.scss
@@ -3,8 +3,10 @@
 .list{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding: 10px;
-  flex: 0 1 20%;
+  flex: 0 0 35%;
+  min-width: 400px;
   &__item{
     display: flex;
     justify-content: space-between;
