--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -7,6 +7,7 @@
 
 .center{
   justify-content: center;
+  text-align: center;
 }
 
 .space-evenly{
@@ -25,9 +26,10 @@
 }
   
 .photo{
-  display: block;
-  width: 20vw;
+  display: inline-block;
+  width: 15vw;
   border-radius: 20px;
+  min-width: 200px;
 }
   
 .wrapper{
@@ -36,13 +38,14 @@
 
 }
 
+.wrap-wrap{
+  flex-wrap: wrap;
+}
+
 .d-flex{
   display: flex;
 }
 
-.container{
-  max-width: 1180px;
-}
 
 
 
