--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'blocks/_main.scss';
 @import 'blocks/_list.scss';
 @import 'blocks/_overlay.scss';
+@import 'blocks/_logo.scss';
 *{
   box-sizing: border-box;
   font-family: "B612";
@@ -10,7 +11,6 @@
 body{
   padding: 0 5%;
   margin: 0;
-  height: 200vh;
   background-color: $main-color;
 }
 
