--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -1,3 +1,5 @@
+@import "_mixins.scss";
+
 .flex-wrapper{
   margin: 0;
   display: flex;
@@ -46,6 +48,24 @@
   display: flex;
 }
 
+.column{
+  flex-direction: column;
+}
 
+.w-80{
+  width: 80%;
+}
 
+.space-between{
+  align-content: space-between;
+}
 
+.flex-end{
+  align-items: flex-end;
+}
+
+.tablet-center{
+  @include tablet{
+    align-content: center;
+  }
+}
