--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'blocks/_list.scss';
 @import 'blocks/_overlay.scss';
 @import 'blocks/_logo.scss';
+@import 'blocks/_nav.scss';
 *{
   box-sizing: border-box;
   font-family: "B612";
