--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -44,25 +44,23 @@
   @include tablet{
     flex-direction: column;
     margin-bottom: 1rem;
-    transition: 1s ease;
+    transition:max-height 1s ease-in-out;
     overflow: hidden;
-    height: 0px;
+    max-height: 0;
     padding: 0;
     margin: 0;
     width: 25%;
 
     &__item{
-      height: 0;
-      margin: 0;
-      overflow: hidden;
+      max-height: 0;
     }
     &.opened{
-      transition: 1s ease;
-      height: 100%;
+      transition:max-height 1s ease-in-out;
+      max-height: 500px;
       display: flex;
       .nav__item{
         margin-bottom: 1rem;
-        height: auto;
+        max-height: 500px;
       }
     }
 
