--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -32,7 +32,7 @@
   width: 15vw;
   border-radius: 20px;
   min-width: 200px;
-  
+
 }
   
 .wrapper{
@@ -73,4 +73,7 @@
 
 .align-between{
   align-content: space-between;
+}
+.relative{
+  position: relative;
 }
