--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,8 @@
 @import 'blocks/_nav.scss';
 @import 'blocks/_carousel.scss';
 @import 'blocks/_footer.scss';
+@import 'blocks/_card.scss';
+@import 'helpers/_generic-classes.scss';
 *{
   box-sizing: border-box;
   font-family: "B612";
