--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -77,3 +77,37 @@
 .relative{
   position: relative;
 }
+
+
+.col-4{
+  flex: 1 1 33%;
+}
+
+.menu{
+  transition-duration: .3s;
+  &:hover{
+    transform: scale(1.2);
+    color: white;
+  }
+}
+
+.btn{
+  border: 1px solid $font-color;
+  background-color: $content-background-color;
+  width: fit-content;
+  padding: 10px;
+  color:$font-color;
+  font-size: 1.3rem;
+  box-shadow: 0px 1px 10px 1px $main-color;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform .3s;
+  &:hover{
+    transform: scale(1.05);
+  }
+}
+
+.border-light{
+  border: 1px solid $font-color;
+  border-radius: 10px;
+}
