Added grid system Created map using google map API Created btn

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,10 @@
 @import 'blocks/_carousel.scss';
 @import 'blocks/_footer.scss';
 @import 'blocks/_card.scss';
+@import 'grid/_desktop.scss';
+@import 'grid/_phone.scss';
+@import 'blocks/_btn.scss';
+@import 'blocks/_map.scss';
 @import 'helpers/_generic-classes.scss';
 *{
   box-sizing: border-box;
