--- a/scss/blocks/_list.scss
+++ b/scss/blocks/_list.scss
@@ -1,11 +1,15 @@
 @import '../helpers/helper-pack';
 
 .list{
-
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
 
+  strong{
+    white-space: nowrap;
+  }
+ 
   &__item{
     display: flex;
     justify-content: space-between;
@@ -13,8 +17,9 @@
     border-radius: 5px;
     padding: 10px;
     margin-top: 1rem;
+    flex: 1 0 auto;
     strong:last-of-type{
-      margin-left: 3rem;
+      margin-left: 1rem;
     }
   }
   
