Added contact block Added icons Reworked footer

--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -3,7 +3,7 @@
 .footer{
 
   height: auto;
-  background-color: $main-color;
+  background-color: $content-background-color;
   width: 100%;
   padding: 1rem;
   display: flex;
