--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -1,4 +1,5 @@
 $main-color: #102542;
 $font-color: #CF4D6F;
+$font-color-light: #e689a1;
 $content-background-color: #FFD1BA;
 $help-color:#CDD7D6;
