--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'grid/_phone.scss';
 @import 'blocks/_btn.scss';
 @import 'blocks/_map.scss';
+@import 'blocks/_icon.scss';
 @import 'helpers/_generic-classes.scss';
 *{
   box-sizing: border-box;
