--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -1,5 +1,9 @@
 @import "_mixins.scss";
 
+a{
+  color: $font-color;
+}
+
 .flex-wrapper{
   margin: 0;
   display: flex;
@@ -86,7 +90,11 @@
   }
 }
 
-
+.small-title{
+  font-size: 1.5rem;
+  text-decoration: underline;
+  
+}
 
 .border-light{
   border: 1px solid $font-color;
