added pop-up window for e-mail contact added form

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,8 @@
 @import 'blocks/_btn.scss';
 @import 'blocks/_map.scss';
 @import 'blocks/_icon.scss';
+@import 'blocks/_contact.scss';
+@import 'blocks/_form.scss';
 @import 'helpers/_generic-classes.scss';
 *{
   box-sizing: border-box;
