--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -29,6 +29,14 @@ a{
   color: $font-color;
   padding: 5px 25px;
   box-shadow: 0px 11px 19px 7px rgba(0,0,0,0.84);
+  @include phone{
+    div{
+      margin-top: 2rem;
+      &:last-child{
+        margin-bottom: 2rem;
+      }
+    }
+  }
 }
   
 .photo{
