--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@
 @import 'helpers/_generic-classes.scss';
 *{
   box-sizing: border-box;
-  font-family: "B612";
+  font-family: "Roboto";
 }
 
 body{
