--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,10 +14,12 @@
 @import 'blocks/_icon.scss';
 @import 'blocks/_contact.scss';
 @import 'blocks/_form.scss';
+@import 'blocks/_pop-up.scss';
 @import 'helpers/_generic-classes.scss';
 *{
   box-sizing: border-box;
   font-family: "Roboto";
+
 }
 
 body{
