--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -15,17 +15,13 @@ $height: 100vh;
 
   justify-content: center;
   align-items: center;
-  &.active{
-    display: flex;
-  }
+  animation: appear 350ms ease-in 1;
 
 }
 
 @keyframes contact{
-  from{
-    transform: rotate(0);
-  }
-  to{
-    transform: rotate(45);
+  0%{
+    opacity: 0;
+    transform: translateY(-10px);
   }
 }
