--- a/scss/helpers/_generic-classes.scss
+++ b/scss/helpers/_generic-classes.scss
@@ -22,6 +22,9 @@ a{
 
 .content-wrapper{
   background-color: $content-background-color;
+  @media (prefer-color-scheme: dark){
+    background-color: #fff;
+  }
   display: flex;
   flex-direction: column;
   border-radius: 20px;
