--- a/scss/blocks/_carousel.scss
+++ b/scss/blocks/_carousel.scss
@@ -1,61 +1,62 @@
-@import '../helpers/_helper-pack.scss';
-$number-of-slides: 3;
+$count-of-slides: 3;
 
-.carousel-wrapper {
-  position: relative;
+
+
+.carousel{
+  width: 200px;
   overflow: hidden;
-  
-  .carousel__inner{
-
-    display: flex;
-    
-  }
-
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    color: #fff;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 5px;
-    background-color: none;
-    padding: 10px;
-    opacity: 0;
-    // transition: width .3s ease;
-    // overflow: hidden;
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.3);
-      opacity: 100%;
+  position: relative;
+  &:hover{
+    .carousel__nav{
+      opacity: 1;
     }
   }
 
-  .next {
-    right: 0;
+
+  &__inner{
+    position: relative;
+    display: flex;
+    transition-duration: 1s;
   }
+  &__nav{
+    position: absolute;
+    opacity: 0;
+    top: 45%;
+    padding: .5rem;
+    font-size: 200%;
+    background-color: rgba(255,255,255,0.15);
+    border-radius: 15px;
+    margin: .3rem;
+    transition-duration: .5s;
+    color: #fff;
+    &:hover{
+      cursor: pointer;
+    }
+    &.prev{
+      left: 0;
+    }
+    &.next{
+      right: 0;
+    }
+  }
+
+  .dot{
+    visibility: hidden;
+  }
+
+  .dot:nth-child(1):checked ~.carousel__inner{
+    left: 0 * -200px;
+  }
+
+  @for $i from 1 through $count-of-slides{
+    .dot:nth-child(#{$i}):checked ~.carousel__inner{
+      left: ($i - 1) * -200px;
+    }
+  }
+  
 }
 
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
 
-.active {
-  background-color: none;
-  display: inline-block;
-}
 
-.dots-wrapper {
-  margin: 1rem;
-  width: 100%;
-  text-align: center;
-}
+
+
