--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -1,16 +1,13 @@
-@import '../helpers/_helper-pack.scss';
+@import "../helpers/_helper-pack.scss";
 
-.main{
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 0 5%;
 }
 
-.title{
+.title {
   text-align: center;
   text-decoration: underline;
 }
-
-
-
